@@ -1,3 +1,8 @@
+2011-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/mushin/command/main.py:
+	  No more than 80 chars.
+
 2011-04-28  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/mushin/command/main.py:
